--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -2,22 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>react-colorful</title>
-    <meta
-      name="description"
-      content="A tiny (1,9 KB) color picker component for React and Preact apps"
-    />
-    <meta
-      name="keywords"
-      content="react, color, picker, component, accessible, react-color, hex, rgb, hsl, hsv"
-    />
+    <title>color picker</title>
     <meta
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Recursive&family=PT+Mono&display=swap"
-      rel="stylesheet"
     />
     <meta property="og:image" content="assets/og.png" />
     <meta property="og:image:width" content="1200" />
@@ -25,14 +13,6 @@
   </head>
   <body>
     <div id="root"></div>
-
-    <!-- Make the demo working in IE11 -->
-    <script
-      crossorigin="anonymous"
-      src="https://polyfill.io/v3/polyfill.min.js?features=Object.assign%2CArray.prototype.fill"
-      defer
-    ></script>
-
     <script src="index.tsx" defer></script>
   </body>
 </html>
